--- a/pages/add/add.html
+++ b/pages/add/add.html
@@ -11,6 +11,9 @@
 			html , body{
 				background: #fff;
 			}
+			.mui-popup{
+				position:fixed !important;
+			}
 			.FloatRight{
 				float: right;
 				color: #dd524d;
