--- a/pages/orderAdd/orderAdd.html
+++ b/pages/orderAdd/orderAdd.html
@@ -10,8 +10,11 @@
 	</head>
 	<style>
 		html , body , .mui-content{
-				background: #fff;
-			}
+			background: #fff;
+		}
+		.mui-popup{
+			position:fixed !important;
+		}
 		.OrderItem{
 			padding: 10px;
 		}
