--- a/pages/orderList/orderList.html
+++ b/pages/orderList/orderList.html
@@ -9,7 +9,10 @@
 		<link href="../../css/style.css" rel="stylesheet" />
 		<style>
 			#refreshContainer{
-				margin-bottom: 50px;
+				margin-bottom: 0px;
+			}
+			.mui-content{
+				overflow-y: scroll !important;
 			}
 			.RecordList{
 				font-size: 14px;
