--- a/pages/wage/list.html
+++ b/pages/wage/list.html
@@ -20,6 +20,9 @@
 				margin-top: 45px;
 				margin-bottom: 50px;
 			}
+			.mui-content{
+				overflow-y: scroll !important;
+			}
 			.RecordList{
 				font-size: 14px;
 			}
