add order yanzheng reduce

--- a/pages/orderAdd/orderAdd.html
+++ b/pages/orderAdd/orderAdd.html
@@ -227,46 +227,46 @@
 			    		mui.alert( '请先选择压贴完工日期!', '提示')
 						return false
 			    	}
-					if($("#order_cx_s")[0].value == '' || $("#order_cx_s")[0].value == 'undefined'){
-			    		mui.alert( '请先选择成型一组开工日期!', '提示')
-						return false
-			    	}
-					if($("#order_cx_e")[0].value == '' || $("#order_cx_e")[0].value == 'undefined'){
-			    		mui.alert( '请先选择成型一组完工日期!', '提示')
-						return false
-			    	}
-					if($("#order_cx_s")[0].value == '' || $("#order_cx_s")[0].value == 'undefined'){
-			    		mui.alert( '请先选择成型二组开工日期!', '提示')
-						return false
-			    	}
-					if($("#order_cx2_e")[0].value == '' || $("#order_cx2_e")[0].value == 'undefined'){
-			    		mui.alert( '请先选择成型二组完工日期!', '提示')
-						return false
-			    	}
-					if($("#order_mg_s")[0].value == '' || $("#order_mg_s")[0].value == 'undefined'){
-			    		mui.alert( '请先选择木工开工日期!', '提示')
-						return false
-			    	}
-					if($("#order_mg_e")[0].value == '' || $("#order_mg_e")[0].value == 'undefined'){
-			    		mui.alert( '请先选择木工完工日期!', '提示')
-						return false
-			    	}
-					if($("#order_yq_s")[0].value == '' || $("#order_yq_s")[0].value == 'undefined'){
-			    		mui.alert( '请先选择油漆开工日期!', '提示')
-						return false
-			    	}
-					if($("#order_yq_e")[0].value == '' || $("#order_yq_e")[0].value == 'undefined'){
-			    		mui.alert( '请先选择油漆完工日期!', '提示')
-						return false
-			    	}
-					if($("#order_bz_s")[0].value == '' || $("#order_bz_s")[0].value == 'undefined'){
-			    		mui.alert( '请先选择包装开工日期!', '提示')
-						return false
-			    	}
-					if($("#order_bz_e")[0].value == '' || $("#order_bz_e")[0].value == 'undefined'){
-			    		mui.alert( '请先选择包装完工日期!', '提示')
-						return false
-			    	}
+//					if($("#order_cx_s")[0].value == '' || $("#order_cx_s")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择成型一组开工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_cx_e")[0].value == '' || $("#order_cx_e")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择成型一组完工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_cx_s")[0].value == '' || $("#order_cx_s")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择成型二组开工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_cx2_e")[0].value == '' || $("#order_cx2_e")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择成型二组完工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_mg_s")[0].value == '' || $("#order_mg_s")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择木工开工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_mg_e")[0].value == '' || $("#order_mg_e")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择木工完工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_yq_s")[0].value == '' || $("#order_yq_s")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择油漆开工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_yq_e")[0].value == '' || $("#order_yq_e")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择油漆完工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_bz_s")[0].value == '' || $("#order_bz_s")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择包装开工日期!', '提示')
+//						return false
+//			    	}
+//					if($("#order_bz_e")[0].value == '' || $("#order_bz_e")[0].value == 'undefined'){
+//			    		mui.alert( '请先选择包装完工日期!', '提示')
+//						return false
+//			    	}
 					if($("#order_note")[0].value.trim() == '' || $("#order_note")[0].value.trim() == 'undefined'){
 			    		mui.alert( '请先填写订单描述!', '提示')
 						return false
