add mutiple scan amount

--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -163,6 +163,7 @@
 			};
 			
 			GetUserInfo(GetRequest()["code"])
+//alert('code='+ GetRequest()["code"])
 			/*
 			var loginButton = document.getElementById('login');
 			var accountBox = document.getElementById('account');
