--- a/pages/orderList/index.html
+++ b/pages/orderList/index.html
@@ -1,15 +1,33 @@
 <!doctype html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<title>订单列表</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
+		<script src="../../js/jquery-3.3.1.min.js"></script>
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
 		<style>
 			html , body{
 				background: #fff;
+			}
+			#refreshContainer{
+				margin-bottom: 0px;
+			}
+			.mui-content{
+				overflow-y: scroll !important;
+			}
+			.RecordList{
+				font-size: 14px;
+			}
+			.mui-table-view-chevron .mui-table-view-cell{
+				padding-right:15px ;
+			}
+			.mui-table-view:before{
+				height: 0 !important;
+			}
+			.mui-table-view:after{
+				height: 0 !important;
 			}
 		</style>
 	</head>
@@ -19,30 +37,161 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">订单列表</h1>
 			<span id="addOneOrder" class="mui-icon mui-icon-plus FloatRight"></span>
+			<h5 class="FloatRight">
+				<div id="mySwitch" class="mui-switch mui-switch-mini mui-switch-blue mui-active"  style="margin-top: 4px;margin-right: 10px;">
+				  <div class="mui-switch-handle"></div>
+				</div>
+			</h5>
 		</header>
+		<!--下拉刷新容器-->
+		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
+			<div class="mui-input-row mui-search" style="background: #fff;">
+			    <input id="searchKey" type="search" style="border-radius: 0" class="mui-input-clear" placeholder="" onblur="Search()">
+			</div>
+			<!--<div class="mui-row">
+				<div class="mui-col-sm-4">
+		    		<span>查找</span>
+		    	</div>
+		    	<div class="mui-col-sm-8">
+		    		<form class="mui-input-group">
+						<div class="mui-input-row">
+				        	<input type="text" class="mui-input-clear" placeholder="请输入订单号">
+			    		</div>
+					</form>
+		    	</div>
+			</div>-->
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul class="mui-table-view mui-table-view-chevron RecordList">
+				</ul>
+			</div>
+		</div>
 		
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils.js"></script>
 		<script type="text/javascript">
-			(function($) {
-				$.init({
-				    subpages:[{
-				      url:'orderList.html',
-				      id:'orderList.html',
-				      styles:{
-				        top:'45px',
-				        bottom:'0px'
-				      }
-				    }],
-				});
+			mui.init()
+			var OrderList = []
+			//新增订单
+			$('#addOneOrder')[0].addEventListener('tap', function(event) {
+				mui.openWindow({
+				    url:'../orderAdd/index.html',
+				    id:'add/orderAdd.html',
+				})
+			});
+			
+			var GetOrderList = function(fstatus, orderNo){
+					var OrderListHtml = ''
+					var ifHasOrderNo = orderNo?'&order_no=' + orderNo : '';
+					mui.get(Url + 'orderList?fstatus=' + fstatus + ifHasOrderNo,{},function(data){
+							OrderList = data.employeeList
+							$('.RecordList').empty()
+							if(data.employeeList.length <= 0){
+								OrderListHtml = '<h4 class="emptyList">暂无订单</h4>'
+							}else{
+								data.employeeList.map(function(Item,Idx){
+			            		OrderListHtml += '<li class="mui-table-view-cell">'+
+					            		'<div class="mui-row  recordItem">'+
+									        '<div class="mui-col-sm-8 mui-col-xs-8 ">'+
+									            '<span>'+ (Idx + 1) + '.  单号: '+ Item.order_no +'</span>'+
+									        '</div>'+
+									        '<div class="mui-col-sm-2 mui-col-xs-2 TextAlign_Right">'+
+									        	'<span onclick="ToModifyOrder( '+ Idx +')">修改</span>'+
+									        '</div>'+
+									        '<div class="mui-col-sm-2 mui-col-xs-2 TextAlign_Right">'+
+									        	'<span onclick="ToOperationOrder( '+ Idx +')" >流转</span>'+
+									        '</div>'+
+									    '</div>'+
+				            		'</li>'
+				            	})
+							}
+							$('.RecordList').append(OrderListHtml)
+						},'json'
+					);
+			};
+			
+			document.getElementById("mySwitch").addEventListener("toggle",function(event){
+			  if(event.detail.isActive){
+			    console.log("你启动了开关");
+			    GetOrderList(0)
+			    
+			  }else{
+			    console.log("你关闭了开关");
+			    GetOrderList(1)
+			  }
+			})
+			GetOrderList(0);
+			$(function () {
+				mui.get(Url + 'orderIconList',{},function(res){
+		    		var IconList = {
+		    			'0':'',
+		    			'1':'',
+		    			'2':'',
+		    			'3':''
+		    		}
+		    		var temp = res.orderIconList
+		    		temp.map(function(item,idx){
+		    			IconList[item.icon_type] = item.icon_url
+		    			window.localStorage.setItem('Icons',JSON.stringify(IconList))
+		    		})
+		   		},'json');
+			})
+			
+			
+			window.addEventListener('refresh', function(e){//执行刷新  
+			  GetOrderList();
+			});
+			
+			// 查询
+			function Search (OrderNo) {
+				if($("#searchKey")[0].value !=''){
+					GetOrderList(1,$("#searchKey")[0].value);
+				}else{
+					if($('#mySwitch').is('.mui-active')){
+						GetOrderList(0);
+					}else{
+						GetOrderList(1);
+					}
+				}
 				
-				//新增订单
-				$('#addOneOrder')[0].addEventListener('tap', function(event) {
-					mui.openWindow({
-					    url:'../orderAdd/index.html',
-					    id:'add/orderAdd.html',
+			}
+			//去开工
+			var ToOperationOrder = function(Idx){
+				window.localStorage.setItem('orderId',OrderList[Idx].order_no);
+                window.localStorage.setItem('orderDetail',JSON.stringify(OrderList[Idx]));
+                mui.openWindow({
+					    url:'../operation/index.html',
+					    id:'operation/index.html',
 					})
-				});
-			})(mui);
+			};
+			//去修改订单
+			var ToModifyOrder = function(Idx){
+				window.localStorage.setItem('orderId',OrderList[Idx].order_no);
+                window.localStorage.setItem('orderDetail',JSON.stringify(OrderList[Idx]));
+                mui.openWindow({
+					    url:'../orderModify/index.html',
+					    id:'orderModify/index.html',
+					})
+			};
+			
+//			mui.init({
+//			  pullRefresh : {
+//			    container:"#refreshContainer",
+//			    down : {
+//			    	style:'circle',
+//			    	callback :pulldownRefresh
+//			    }
+//			  }
+//			});
+//			/**
+//			 * 下拉刷新具体业务实现
+//			 */
+//			function pulldownRefresh() {
+//				setTimeout(function() {
+//					mui('#refreshContainer').pullRefresh().endPulldownToRefresh();
+//					mui.toast("刷新完毕");
+//				}, 1500);
+//			}
 		</script>
 	</body>
 
