--- a/pages/orderList/orderList.html
+++ b/pages/orderList/orderList.html
@@ -32,11 +32,26 @@
 	<body>
 		<!--下拉刷新容器-->
 		<div id="refreshContainer" class="mui-content mui-scroll-wrapper">
-		  <div class="mui-scroll">
-		    <!--数据列表-->
-		    <ul class="mui-table-view mui-table-view-chevron RecordList">
-		    </ul>
-		  </div>
+			<div class="mui-input-row mui-search" style="background: #fff;">
+			    <input type="search" style="border-radius: 0" class="mui-input-clear" placeholder="" onblur="Search()">
+			</div>
+			<!--<div class="mui-row">
+				<div class="mui-col-sm-4">
+		    		<span>查找</span>
+		    	</div>
+		    	<div class="mui-col-sm-8">
+		    		<form class="mui-input-group">
+						<div class="mui-input-row">
+				        	<input type="text" class="mui-input-clear" placeholder="请输入订单号">
+			    		</div>
+					</form>
+		    	</div>
+			</div>-->
+			<div class="mui-scroll">
+				<!--数据列表-->
+				<ul class="mui-table-view mui-table-view-chevron RecordList">
+				</ul>
+			</div>
 		</div>
 		
 		<script src="../../js/mui.min.js"></script>
@@ -44,12 +59,12 @@
 		<script type="text/javascript">
 			mui.init()
 			var OrderList = []
-			var ReLogin = function(){
-				mui.openWindow({
-				    url:'../../index.html',
-				    id:'index.html',
-				})
-			};
+//			var ReLogin = function(){
+//				mui.openWindow({
+//				    url:'../../index.html',
+//				    id:'index.html',
+//				})
+//			};
 			var GetOrderList = function(){
 					var OrderListHtml = ''
 					mui.get(Url + 'orderList',{},function(data){
@@ -100,7 +115,10 @@
 			  GetOrderList();
 			});
 			
-			
+			// 查询
+			function Search () {
+				//alert('hahah')
+			}
 			//去开工
 			var ToOperationOrder = function(Idx){
 				window.localStorage.setItem('orderId',OrderList[Idx].order_no);
