--- a/pages/orderAdd/orderAdd.html
+++ b/pages/orderAdd/orderAdd.html
@@ -26,11 +26,13 @@
 		}
 		input{
 			width: auto;
-			padding: 5px 0 !important;
+			height: 20px !important;;
+			padding: 0px 0 !important;
 			font-size: 12px;
 			border-radius: 0 !important;
 			border: 0px !important;
 			border-bottom: 1px solid #333 !important;
+			margin-bottom: 7px;
 			}
 	</style>
 	<body>
@@ -38,11 +40,11 @@
 		    <div class="mui-row">
 		        <div class="mui-col-sm-6 mui-col-xs-6 OrderItem">
 		            <span class="LableSpan">订单号</span>
-				    <input id="order_number"/>
+				    <input type="text" id="order_number"/>
 		        </div>
 		        <div class="mui-col-sm-6 mui-col-xs-6 OrderItem">
 		            <span class="LableSpan">数量</span>
-				    <input id="order_amount"/>
+				    <input type="number" id="order_amount"/>
 		        </div>
 		    </div>
 		    <div class="mui-row">
